[tool.poetry]
name = "zkfair"
version = "0.1.0"
description = ""
authors = ["Alex Kvasha <alex.kvasha.work@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.9"
requests = "^2.31.0"
loguru = "^0.7.2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
